# imd3011-datacentric_ai

./: .gitignore  Notebook_00a-ML Recap - Part 1.ipynb  Notebook_00b-NLP Recap - Part 2.ipynb  Notebook_01-Theoretical_introduction_DCAI.ipynb  Notebook_01.ipynb  Notebook_05-Annotation_error_detection.ipynb  Notebook_05.ipynb  Notebook_08-Advanced_label_models.ipynb  Notebook_08.ipynb  README.md  download_datasets_and_binaries.sh  pyproject.toml
.devcontainer/: devcontainer.json
helpers/: classification.py  dataset.py  discriminative.py  generative_model_src.py  influence_functions.py  labelmodels.py  lf.py  multilabel.py  ner.py  plot.py  semisupervised.py  transformer.py
helpers/explainer/: __init__.py  explainer.py  influence_function.py
images/: active_learning1.avif
