[tool.poetry]
name = "imd3011-datacentric_ai"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <elias.jacob@ufrn.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# ===========================================
# =========== START OF TORCH PART ===========
torch       = { version = "==2.5.1", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
torchvision = { version = "==0.20.1", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
xgboost = "^2.1.4"
lightgbm = "^4.6.0"
scikit-learn = "1.5.2"
langgraph = "^0.3.8"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nltk = "^3.9.1"
transformers = "^4.49.0"
datasets = "^3.3.2"
tokenizers = "^0.21.1"
accelerate = "^1.5.1"
evaluate = "^0.4.3"
nbformat = "^5.10.4"
spacy = "^3.8.4"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.8"
langchain-experimental = "^0.3.4"
langchain-chroma = "^0.2.2"
langchain-huggingface = "^0.1.2"
langchain-ollama = "^0.2.3"
langchain-anthropic = "^0.3.9"
pypdf = "^5.3.1"
scikit-optimize = "^0.10.2"
plotly = "^6.0.0"
plotly-express = "^0.4.1"
wandb = "^0.19.8"
nbconvert = "^7.16.6"
seqeval = "^1.2.2"
umap-learn = "^0.5.7"
sentence-transformers = "^3.4.1"
cleanlab = {extras = ["all"], version = "^2.7.1"}
numbskull = "^0.1.1"
flyingsquid = "^0.0.0a0"
pgmpy = "^0.1.26"
hyperlm = "^0.0.5"
snorkel = "^0.10.0"
xlrd = "^2.0.1"
gliner = "^0.2.16"
backpack-for-pytorch = "^1.7.1"
lightning = "^2.5.0.post0"
torchmetrics = "^1.6.2"
pydantic = "^2.10.6"
skweak = "^0.3.3"
pulearn = "^0.0.11"
cvxopt = "^1.3.2"
json5 = "^0.10.0"
unidecode = "^1.3.8"
langchain-core = "^0.3.45"
pydvl = "^0.9.2"
distributed = "^2025.3.0"
zarr = "^3.0.6"

[tool.poetry.group.cuda]
optional = true

# https://github.com/pytorch/pytorch/blob/main/RELEASE.md#release-compatibility-matrix
[tool.poetry.group.cuda.dependencies]
torch       = { version = "==2.5.1", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
torchvision = { version = "==0.20.1", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }

[tool.poetry.extras]
cpu  = ["torch", "torchvision"]
cuda = ["torch", "torchvision"]

[[tool.poetry.source]]
name     = "pytorch-cuda"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cu124"

[[tool.poetry.source]]
name     = "pytorch-cpu"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cpu"

# ============ END OF TORCH PART ============
# ===========================================

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]